sites/all/themes/alhx/css/pages.css
/* ... */
/* @end */

/* @group Main Navigation */

.mainNav > div {
  padding: 2em 2em 2em 4em;
}

.mainNav {
/*  font: normal .8em/2em monaco, "Monaco", futura;*/
}

.mainNav ul {
  padding: 0;
  margin: 0;
  float: right;
}

.mainNav li {
  list-style-type: none;
  text-align: right;
}

.mainNav a:link, .mainNav a:visited {
  display: block;
  text-decoration: none;
  font-size: 1em;
  color: #285993;
}

.mainNav li:last-child a {
  border-right: 0;
}

.mainNav a:hover, .mainNav a:active {
  color: #993333;
  text-decoration: underline;
}

.mainNav li a.active {
  text-decoration: underline;
}

/* @end */

/* @group Product Filters */

/* @group Root Product Menu */

.gridItem {
  width: 50%;
  float: left;
  text-align: center;
}

.gridItem .productTypeItems {
  border: 0;
}

.gridItem .productTypeItems img {
  width: 200px;
  float: none;
}

.gridItem .productTypeCaption {
  padding: 0;
  margin: 0;
  width: 100%;
}

/* @end */

.productTypeItems {
	width: 100%;
	overflow: hidden;
	margin: 15px 0 0 0;
	padding: 0 0 15px 0;
	border-bottom: 1px solid #e4e4e4;
	}
.productTypeItems img {
	width: 20%;
	height: auto;
	float: left;
	}
.productTypeItems h2 {
	margin: 0;
	}
.productTypeCaption {
	height: 100%;
	padding: 5px;
	width: 75%;
	margin: 0 0 0 22%;
	}

/*.productFilterBar {
  font: normal .75em/1.5em "Monaco", "lucida console", "courier", monospace;
/*  letter-spacing: .3em;*!/
  font-weight: bold;
  padding: .5em 0;
  border-bottom: 2px solid #333;
}*/

.views-exposed-form {
  font: normal .75em/1.5em "Monaco", "lucida console", "courier", monospace;
}

.views-exposed-widgets {
  border: 1px solid #b2c9d8;
  border-radius: .5em;
  margin: 0 !important;
  overflow: hidden;
}

.views-exposed-widget > * {
  /*display: inline-block;*/
}

.views-exposed-widget {
  width: 100%;
}

.views-exposed-widget {
  width: 25%;
  padding: 0em !important;
  display: inline-block;
  border-right: 1px solid #b2c9d8;
  border-bottom: 1px solid #b2c9d8 !important;
  box-sizing: border-box;
  margin: 0;
}

.views-exposed-widget > label {
  font-weight: normal;
/*  text-decoration: underline;*/
  background-color: #eee;
  padding: .5em 1em;
  border-bottom: 1px solid #b2c9d8;
}

.views-exposed-widget > div {
  padding: .5em 1em 1em 1em;
}

.views-exposed-widget:nth-child(4n+4) {
  border-right: none !important;
}

.views-exposed-widget:nth-last-child(-n+2) {
  border-bottom: none !important;
}

.views-exposed-form .views-exposed-widget .form-submit {
  margin-top: 0em !important;
}

/* @end */

/* @group Filtered Product List */

/*.sticky-ul {
    height: 100%;
    overflow: auto;
}*/
.headerFixed h3.stickyHeaders {
  margin: 1em 0 0 0 !important;
}

.headerFixed + .productItem {
  padding-top: 5.5em !important;
}

.headerFixed {
  position: fixed;
  top: 0;
  background-color: #fff;
  width: 50%;
}

.view-content {
/*  padding-top: 1em;*/
  position: relative;
}

.view-content > h3, .stickyHeaders {
    font: bold 1.6em/1.5em 'Archivo Narrow', Impact, Helvetica, Arial, sans-serif !important;
    border-top: 3px solid #285993;
    border-bottom: 3px solid #993333;
}

.view-content .productItem {
  overflow: auto;
}

.productItem .itemNav {
  margin-top: -4em;
  float: right;
  display: block;
  font: normal .7em/1.5em "Monaco", "lucida console", "courier", monospace;
}

.productItem .itemNav a {
  display: block;
  color: #285993;
  text-decoration: none;
  border: 1px solid #b2c9d8;
  text-align: center;
  list-style-type: none;
  display: list-item;
  padding: .25em 1em;
}

.productItem .itemNav a:hover {
  background-color: #faf5d6;
}

.itemNav a:first-child {
  border-radius: .5em .5em 0 0;
}

.itemNav a:last-child {
  border-top: none;
  border-radius: 0 0 .5em .5em;
}

.productItem h2, .productItem h3 {
  margin: 0.25em 8em 0 0;
}

.view-content h2 {
  font-size: 1.2em !important;
}

.view-content h3 {
  font: normal .8em/1.5em "Monaco", "lucida console", "courier", monospace;
}

.view-content .productItem .resultsImageWrap {
  margin-right: .75em;
  overflow: hidden;
  width: 65px;
  height: 65px;
  float: left;
}

.view-content .productItem img {
  width: 100%;
  height: auto;
  float: left;
}

.view-content .itemExtra {
  display: none;
  font: normal .7em/1.5em "Monaco", "lucida console", "courier", monospace;
  margin: 1em 0 0 78px;
  padding-left: 1em;
  border-left: 1px solid #b2c9d8;
}

.view-content .itemExtra p {
  clear: both;
}

.view-content .itemExtra .itemLabel {
  width: 14em;
  margin-right: 1em;
  display: block;
  min-height: 2em;
  float: left;
}

/* @end */

/* @group Content Column */

#content {
/* padding-top: 2em;*/
}

#content h2 {
  font: bold 1.6em/1.5em 'Archivo Narrow', Impact, Helvetica, Arial, sans-serif;
}

#content ul {
  padding: 0;
}

#content article {
  line-height: 1.8em;
  padding: 0;
}

.region-highlighted {
}

.breadcrumb { /* The path to the current page in the form of a list of links */
}
.breadcrumb ol {
  margin: 0;
  padding: 0;
}
.breadcrumb li {
  display: inline;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/* @end */

/* @group About Styles */

.innerViewWrap {
  overflow: auto;
}

.profileTile > img {
  border-radius: 50%;
}

.profileTile {
  min-height: 16em;
  display: block;
  text-align: center;
  width: 30%;
  float: left;
  margin: .5em 0;
}

.profileTile h2 {
  margin: 0;
  font-size: 1.2em !important;
}

.profileTile h3 {
  margin: 0;
  font: normal .8em/1.5em "Monaco", "lucida console", "courier", monospace !important;
}

.profileTile:nth-child(3n+2) {
  margin: .5em 5%;
}

/* @end */

/* @group Product Page Styles */

h1.title {
  margin: 0;
  line-height: 1em;
}

.horizontal-tabs {
  font: normal .8em/1.5em "Monaco", "lucida console", "courier", monospace;
  border: 1px solid #b2c9d8 !important;
}

ul.horizontal-tabs-list {
  background-color: transparent !important;
  border: none !important;
}

.horizontal-tab-button {
  background-color: transparent !important;
}
/* ... */

